# rustws

./: Cargo.toml  README.md
config/: config.toml
src/: main.rs
