[package]
name = "rustws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
photon-rs = "0.3.1"